implement wave configurator as class

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<!-- <input type="checkbox" id="run-cb" /><label for="run-cb">run</label> -->
 			</div>
 
-			<div id="all-wave-settings"></div>
+			<div id="waves-configurator"></div>
 		</div>
 
 		<template id="settings-template">
@@ -106,6 +106,7 @@
 	</div>
 
 	<script type="module" src="js/wavin-wave-creator.js"></script>
+	<!-- <script type="module" src="js/animated-waves-graph-creator.js"></script> -->
 	<!-- <script type="module" src="js/range-creator.js"></script> -->
 </body>
 
