--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/wavin-waves.css">
 	<link rel="stylesheet" href="css/control-points.css">
-	<link rel="stylesheet" href="css/settings.css">
+	<link rel="stylesheet" href="css/configurator.css">
 </head>
 
 <body>
@@ -32,6 +32,7 @@
 		</svg>
 	</div>
 
+	<!-- template for wave-describing elements (beziers, points, radiuses) -->
 	<svg id="wave-controls-template" width="0" height="0" xmlns="http://www.w3.org/2000/svg">
 		<g class="ctrl-group">
 			<!-- wave start -->
@@ -64,28 +65,20 @@
 		</g>
 	</svg>
 
-	<div class="settings-wrapper">
+	<input type="checkbox" class="run-cb" id="run-cb" checked="checked" /><label for="run-cb">Run</label>
 
+	<div class="waves-configurator">
 		<div class="settings">
 			<div class="meta-settings">
-				<label for="wave-selector">Edit settings for</label> <select id="wave-selector" class="wave-selector"></select>
-				<span class="bezier-for-group">
-					Show bezier controls for
-					<input type="radio" name="bezier-for" value="active" id="bezier-for-active" checked="checked"><label
-						for="bezier-for-active">Active</label>
-					<input type="radio" name="bezier-for" value="none" id="bezier-for-none"><label
-						for="bezier-for-none">None</label>
-					<input type="radio" name="bezier-for" value="all" id="bezier-for-all"><label for="bezier-for-all">All</label>
-				</span>
-
-				<input type="checkbox" class="run-cb" id="run-cb" checked="checked" /><label for="run-cb">Run</label>
-				<!-- <input type="checkbox" id="run-cb" /><label for="run-cb">run</label> -->
+				<label for="wave-configurator-selector">Edit settings for</label> <select id="wave-configurator-selector" class="wave-configurator-selector"></select>
+				<input type="checkbox" class="controls-cb" id="controls-cb" checked="checked" /><label for="controls-cb">Show bezier controls</label>
 			</div>
 
-			<div id="waves-configurator"></div>
+			<!-- div that will contain configurator for each wave -->
+			<div id="wave-configurators"></div>
 		</div>
 
-		<template id="settings-template">
+		<template id="wave-configurator-template">
 			<div class="wave-settings">
 				<div class="point-ranges">
 					<h2>curve starting point</h2>
@@ -106,8 +99,6 @@
 	</div>
 
 	<script type="module" src="js/wavin-wave-creator.js"></script>
-	<!-- <script type="module" src="js/animated-waves-graph-creator.js"></script> -->
-	<!-- <script type="module" src="js/range-creator.js"></script> -->
 </body>
 
 </html>
