--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 
 	<div class="content-section">
 		<div class="start-stop-controls">
-			<input type="checkbox" class="run-cb" id="run-cb" checked="checked" /><label for="run-cb">Run</label>
+			<!-- <input type="checkbox" class="run-cb" id="run-cb" checked="checked" /><label for="run-cb">Run</label> -->
+			<input type="checkbox" class="run-cb" id="run-cb" /><label for="run-cb">Run</label>
 		</div>
 	</div>
 
