starting static configurator

--- a/static-generator.html
+++ b/static-generator.html
@@ -46,14 +46,10 @@
 	<button class="draggable-point draggable-point--ctrl" data-id="draggable-point-ctrl-2"></button>
 </template>
 
-<svg id="wave-controls-template" width="0" height="0" xmlns="http://www.w3.org/2000/svg">
+<svg id="bezier-lines-template" width="0" height="0" xmlns="http://www.w3.org/2000/svg">
 	<g class="ctrl-group">
-		<!-- wave start -->
 		<path class="bezier-line" data-id="bezier-line-1" />
-		<circle class="bezier-point" data-id="bezier-point-1" />
-		<!-- wave end -->
 		<path class="bezier-line" data-id="bezier-line-2" />
-		<circle class="bezier-point" data-id="bezier-point-2" />
 	</g>
 </svg>
 
