change wave config to make them more dynamic

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
 	<div class="content-section">
 		<div class="start-stop-controls">
-			<!-- <input type="checkbox" class="run-cb" id="run-cb" checked="checked" /><label for="run-cb">Run</label> -->
-			<input type="checkbox" class="run-cb" id="run-cb" /><label for="run-cb">Run</label>
+			<input type="checkbox" class="run-cb" id="run-cb" checked="checked" /><label for="run-cb">Run</label>
+			<!-- <input type="checkbox" class="run-cb" id="run-cb" /><label for="run-cb">Run</label> -->
 		</div>
 	</div>
 
@@ -89,7 +89,7 @@
 				</div>
 
 				<!-- div that will contain configurator for each wave -->
-				<div id="wave-configurators"></div>
+				<div id="wave-configurators" class="wave-configurators"></div>
 			</div>
 
 			<template id="wave-configurator-template">
